GameBackend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-backend
  labels:
    name: game-backend
    app: tiny-mmo
